<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="home_label">Home</string>
    <string name="app_name">JarrodCoffeeCafe</string>
    <string name="menu_label">Menu</string>
    <string name="events_label">Events</string>
    <string name="contact_label">Contact US</string>

    <!-- label for tagline -->
    <string name="destination_tags">Your Destination for Great Coffee, Tea \n and Local Events.</string>

    <string name="hours" tools:ignore="Typos">Tuesday thru Thursday\'s \n 9am to 5pm \n Friday\'s and Saturday\'s \n 9am to 9pm \n Sunday\'s \n 10am to 3pm</string>
    <string name="hour_heading">Hours</string>
    <string name="location">154 W. Main St. \n Mesa, AZ 85201 \n (Downtown Mesa)</string>
    <string name="location_heading">Location</string>

    <string name="content_desc">Some content description here.</string>

    <string name="phone_number">(480)-822–7146</string>
    <string name="map_label">Go To Map</string>
    <string name="email_label">Email</string>
    <string name="follow_text">Follow Us On:</string>
    <string name="face_label">Facebook</string>
    <string name="insta_label">Instagram</string>
    <string name="order_label">Add To Order</string>

    <string name="coffee_title">House Coffee</string>

    <!-- temp string for menu items  -->
    <string name="temp_number">12 oz</string>
    <string name="tempe_price">$2.50</string>

    <!-- temp strings for event items -->
    <string name="temp_date">08 /n 25 /n 2022</string>
    <string name="temp_event_name">Some Event</string>

    <string name="temporary_text_event">Some Event Name</string>
    <string name="temporary_date_time_text">01/24/2022 &#8211; 5:00 p.m.</string>
    <string name="event_content_description">Arrow Image for events</string>

</resources>